2002-11-09  Mo DeJong  <mdejong@uncounted.org>

	* Makefile.in: Regen.
	* configure: Regen.
	* configure.in: Invoke AC_CANONICAL_HOST
	to better support cross compiling.
	Set auxdir to .. so configure finds
	config.sub.
	* PORT/Makefile.in: Regen, fix cross
	compiling by setting AR = @AR@.

2002-09-11  Mo DeJong  <supermo@bayarea.net>

	Added SN-511-2002-09-11 tag.

2002-07-02  Mo DeJong  <supermo@bayarea.net>

	Added SN-510-2002-07-02 and SN-51-branch tags.

2002-04-24  Mo DeJong  <supermo@bayarea.net>

	* configure: Regen.
	* configure.in: Explicitly set ac_cv_exeext
	when compiling with VC++ since the AC_EXEEXT
	from autoconf 2.13 incorrectly detects .pdb
	as the executable extension.
	* include/cdefs.h: When compiling with VC++,
	use standard keywords and don't muck with
	__inline because it is used in Windows
	header files. This problem did not show
	up until now because the Windows headers
	used to be pulled in before cdef.h.

2002-04-22  Mo DeJong  <supermo@bayarea.net>

	Add mingw native/cross build support.
	
	* config.h.in: Regen.
	* configure: Regen.
	* configure.in: Set WINFLAGS appropriately when
	building with mingw. Replace broken AC_TYPE_*
	macros with manual checks that set HAVE_*
	values. Include winsock.h when checking for
	u_char with mingw.
	* PORT/Win32/include/NTunixstubs.h: Remove
	mode_t typedef. Correct case of include so
	that it works with Mingw on a case sensitive
	file-system.
	* PORT/include/compat.h: Check for missing
	ssize_t, size_t, mode_t, off_t, and pid_t
	types and define them if needed. Include the
	NTunixstubs.h header when building with mingw.

2002-04-21  Mo DeJong  <supermo@bayarea.net>

	Remove old style acconfig.h template for
	config.h.in since it is deprecated in
	newer versions of automake.
	
	* Makefile.in: Regen.
	* acconfig.h: Remove.
	* acinclude.m4: Update AC_DEFINE calls to 3
	arg form so that acconfig.h is not needed.
	* aclocal.m4: Regen.
	* config.h.in: Regen.
	* configure: Regen.